tests/errors/compiler/get_field_not_from_struct_pointer/get_field_from_int.c
void main()
{
	int a;
	a->1;
}
